--- a/src/app/modules/admin/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/pages/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
     </section>
     <div class="divider"></div>
     <section id="campuses" role="region">
-      <h2>Estadísticas</h2>
+      <h2>Total por sedes</h2>
       <app-campuses></app-campuses>
     </section>
   </main>
