feat: update platforms designs and remove new platform form

--- a/src/app/modules/admin/pages/platforms/platforms.component.html
+++ b/src/app/modules/admin/pages/platforms/platforms.component.html
@@ -1,77 +1,67 @@
 <app-navbar></app-navbar>
-<main>
-  <section>
-    <header>
-      <h2>{{ headerTitle }}</h2>
-      <span
-        class="add material-symbols-outlined"
-        (click)="setIsRegistering()"
-        *ngIf="!isRegistering && !isShowingInfo"
-      >
-        add
-      </span>
-    </header>
-    <h3 *ngIf="platforms.length === 0 && !isRegistering && !isShowingInfo">
-      No hay plataformas registradas
-    </h3>
-    <table *ngIf="!isRegistering && platforms.length > 0 && !isShowingInfo">
-      <thead>
-        <tr>
-          <th>#</th>
-          <th>Nombre</th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr
-          *ngFor="let platform of platforms"
-          (click)="setIsShowingInfo(platform)"
-        >
-          <td>{{ platform.id }}</td>
-          <td>{{ platform.name }}</td>
-          <td>
-            <span class="right material-symbols-outlined"> chevron_right </span>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-    <form
-      *ngIf="isRegistering && !isShowingInfo"
-      (ngSubmit)="onSubmit()"
-      [formGroup]="form"
-    >
-      <label for="platform">Nombre de la plataforma</label>
-      <input type="text" id="platform" formControlName="name" />
-      <div class="actions">
-        <button type="submit">Registrar</button>
-        <button type="button" (click)="setIsRegistering()">Cancelar</button>
-      </div>
-    </form>
-    <article *ngIf="isShowingInfo">
-      <section class="platform-info">
-        <p>
-          <span>ID generado</span>
-          <span>{{ platformInfo.id }}</span>
-        </p>
-        <p>
-          <span>Fecha y hora de creación</span>
-          <span>{{ platformInfo.createdAt }}</span>
-        </p>
-        <p>
-          <span>Actualizado por última vez</span>
-          <span>{{ platformInfo.updatedAt }}</span>
-        </p>
-        <p>
-          <span>Nombre asignado</span>
-          <span>{{ platformInfo.name }}</span>
-        </p>
-      </section>
-      <hr />
-      <section class="actions">
-        <button type="button" (click)="setIsShowingInfo(undefined)">
-          Regresar
-        </button>
-      </section>
-    </article>
-  </section>
-</main>
+<div class="page">
+  <app-little-nav [routes]="routes"></app-little-nav>
+  <main>
+    <section class="dash-card">
+      <header>
+        <h2>{{ headerTitle }}</h2>
+        <span class="add material-symbols-outlined" *ngIf="!isShowingInfo">
+          add
+        </span>
+      </header>
+      <h3 *ngIf="platforms.length === 0 && !isShowingInfo">
+        No hay plataformas registradas
+      </h3>
+      <table *ngIf="platforms.length > 0 && !isShowingInfo" class="shadow">
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>Nombre</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr
+            *ngFor="let platform of platforms"
+            (click)="setIsShowingInfo(platform)"
+          >
+            <td>{{ platform.id }}</td>
+            <td>{{ platform.name }}</td>
+            <td>
+              <span class="right material-symbols-outlined">
+                chevron_right
+              </span>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <article *ngIf="isShowingInfo">
+        <section class="platform-info">
+          <h3>Información detallada</h3>
+          <p>
+            <span>ID generado</span>
+            <span>{{ platformInfo.id }}</span>
+          </p>
+          <p>
+            <span>Nombre asignado</span>
+            <span>{{ platformInfo.name }}</span>
+          </p>
+          <p>
+            <span>Fecha y hora de creación</span>
+            <span>{{ platformInfo.createdAt }}</span>
+          </p>
+          <p>
+            <span>Actualizado por última vez</span>
+            <span>{{ platformInfo.updatedAt }}</span>
+          </p>
+        </section>
+        <div class="divider"></div>
+        <section class="actions">
+          <button type="button" (click)="setIsShowingInfo(undefined)">
+            Regresar
+          </button>
+        </section>
+      </article>
+    </section>
+  </main>
+</div>
