--- a/src/app/modules/admin/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/pages/dashboard/dashboard.component.html
@@ -2,13 +2,17 @@
 <div class="page">
   <app-little-nav [routes]="routes" class="nav"></app-little-nav>
   <main>
-    <section id="stats" role="region">
-      <h2>Transferencias del día</h2>
+    <section id="stats" role="region" class="dash-card">
+      <header>
+        <h2>Transferencias del día</h2>
+      </header>
       <app-stats></app-stats>
     </section>
     <div class="divider"></div>
-    <section id="campuses" role="region">
-      <h2>Total por sedes</h2>
+    <section id="campuses" role="region" class="dash-card">
+      <header>
+        <h2>Total por sedes</h2>
+      </header>
       <app-campuses></app-campuses>
     </section>
   </main>
