update: temporary design to campuses cards

--- a/src/app/modules/admin/components/stats/stats.component.html
+++ b/src/app/modules/admin/components/stats/stats.component.html
@@ -1,10 +1,10 @@
-<table class="shadow">
+<table>
   <thead>
     <tr>
       <th class="center">ID</th>
       <th>Plataforma</th>
       <th class="center">Transferencias</th>
-      <th>Total</th>
+      <th class="right">Total</th>
     </tr>
   </thead>
   <tbody>
@@ -12,7 +12,7 @@
       <td class="center">{{ platform.platformId }}</td>
       <td>{{ platform.platformName }}</td>
       <td class="center">{{ platform.transfersAmount }}</td>
-      <td>{{ platform.total }}</td>
+      <td class="right">{{ platform.total }}</td>
     </tr>
   </tbody>
 </table>
