--- a/src/app/modules/admin/components/campuses/campuses.component.css
+++ b/src/app/modules/admin/components/campuses/campuses.component.css
@@ -5,20 +5,28 @@
 }
 
 article {
+  padding-right: 2rem;
   background-color: var(--bg-300);
-  padding: 2rem;
   border-radius: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 article h2 {
-  background-color: var(--primary-200);
-  color: var(--bg-300);
-  font-weight: 500;
-  font-size: 1.8rem;
+  padding: 1.5rem 0;
+  width: 7rem;
+  font-weight: 600;
+  font-size: 2.2rem;
   text-align: center;
-  border-radius: 2rem;
-  padding: 1rem;
-  margin-bottom: 2rem;
+  background-color: var(--primary-200);
+  color: var(--primary-300);
+  border-bottom-right-radius: 50%;
+}
+
+article h2::before {
+  content: "#";
+  font-size: 2rem;
 }
 
 article p {
