--- a/src/app/modules/admin/components/campuses/campuses.component.html
+++ b/src/app/modules/admin/components/campuses/campuses.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <article class="shadow" *ngFor="let campus of dashboard?.campuses">
-    <h2>Sede {{ campus.numeral }}</h2>
+    <h2>{{ campus.numeral }}</h2>
     <p>{{ campus.total }}</p>
   </article>
 </div>
