--- a/src/app/modules/admin/pages/campuses/campuses.component.css
+++ b/src/app/modules/admin/pages/campuses/campuses.component.css
@@ -1,201 +1,93 @@
 main {
-  background-color: var(--white-color);
-  margin: 6rem 2rem 2rem 15rem;
-  min-height: calc(100vh - 8rem);
-  border-radius: 1rem;
-  padding: 2rem;
-  box-shadow: var(--shadow);
+  min-height: calc(100vh - var(--little-nav-h) - 2rem);
+  padding: 0 2rem 4rem;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-section:not(.campus-info, .platforms, .actions, .form-section) {
-  width: 90%;
-  border: 0.15rem solid var(--primary-color-400);
-  border-radius: 1rem;
-  padding: 1rem;
+  justify-content: space-between;
+  gap: 2rem;
 }
 
 header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 1px solid var(--gray-color-400);
-  padding: 0 1rem 0.5rem;
-}
-
-h2,
-.add {
-  font-size: 1.2rem;
-  color: var(--gray-color-950);
 }
 
 .add {
   cursor: pointer;
-  color: var(--background-color);
-  background-color: var(--primary-color-500);
-  border-radius: 0.5rem;
-  padding: 0.15rem 0.25rem;
+  color: var(--bg);
+  background-color: var(--primary-100);
+  border-radius: 1rem;
+  padding: 0.25rem;
+  transition: ease-in-out 200ms;
 }
 
 .add:hover {
-  background-color: var(--primary-color-600);
+  background-color: var(--primary-200);
 }
 
 .add:active {
-  background-color: var(--primary-color-700);
-}
-
-table {
-  margin-top: 1rem;
+  scale: 0.9;
 }
 
 .right {
   cursor: default;
-  color: var(--gray-color-600);
+  color: var(--text-200);
 }
 
-form {
-  width: 80%;
-  margin: 1.5rem auto;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+article {
+  background-color: var(--bg);
+  padding: 3rem;
+  border-radius: 1rem;
 }
 
-label {
-  font-size: 1.1rem;
-  font-weight: 600;
-  margin-bottom: 0.4rem;
-  color: var(--gray-color-900);
-}
-
-.info label {
-  display: block;
-}
-
-.info input,
-button {
-  font-family: inherit;
-  border-radius: 0.5rem;
-  padding: 0.5rem 0.8rem;
-}
-
-.info input {
-  width: 100%;
-  font-size: 0.9rem;
-  color: var(--gray-color-900);
-  background-color: var(--white-color);
-  border: 0.15rem solid var(--gray-color-400);
-}
-
-.flex {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
-
-.flex .info {
-  width: 50%;
-}
-
-.actions {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-}
-
-button {
-  margin-top: 0.5rem;
-  font-size: 1rem;
-  font-weight: 600;
-  width: 40%;
-}
-
-button[type="submit"] {
-  background-color: var(--primary-color-500);
-  color: var(--background-color);
-  border: 0.15rem solid var(--primary-color-500);
-}
-
-button[type="button"] {
-  background-color: var(--gray-color-50);
-  color: var(--secondary-color-500);
-  border: 0.15rem solid var(--secondary-color-500);
-}
-
-button:hover {
-  cursor: pointer;
-}
-
-button[type="submit"]:hover {
-  background-color: var(--primary-color-600);
-  border-color: var(--primary-color-600);
-}
-
-button[type="submit"]:active {
-  background-color: var(--primary-color-700);
-  border-color: var(--primary-color-700);
-}
-
-button[type="button"]:hover {
-  background-color: var(--secondary-color-500);
-  color: var(--background-color);
-}
-
-button[type="button"]:active {
-  background-color: var(--secondary-color-600);
-  border-color: var(--secondary-color-600);
-}
-
-.info input:focus {
-  outline: none;
-  border-color: var(--secondary-color-500);
-}
-
-.info input:valid {
-  border-color: var(--primary-color-500);
-}
-
-h3 {
-  color: var(--gray-color-900);
-  text-align: center;
-  padding: 2rem 0 1rem;
+article h3 {
+  font-size: 1.8rem;
+  margin-bottom: 2rem;
 }
 
 .campus-info p {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0.3rem 1.2rem;
-  color: var(--gray-color-900);
-}
-
-.campus-info p:first-of-type {
-  margin-top: 1rem;
-}
-
-.campus-info p:last-of-type {
-  margin-bottom: 1rem;
 }
 
 .campus-info p > span {
-  font-size: 0.75rem;
+  font-size: 1.5rem;
 }
 
-.campus-info p > span:nth-of-type(2) {
-  text-align: right;
+.divider {
+  width: 100%;
+  height: 2px;
+  border: none;
+  background-color: var(--accent-100);
+}
+
+.actions {
+  margin-top: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 3rem;
+}
+
+.platforms {
+  margin-top: 3rem;
 }
 
 .platform-info label {
-  display: flex;
-  align-items: baseline;
-  justify-content: space-between;
+  font-weight: 500;
 }
 
-.form-section {
-  width: 70%;
-  margin: auto;
+.platform-info label input {
+  margin-right: 1rem;
+}
+
+.platform-info,
+.campus-info p {
+  padding: 0.3rem 1.2rem;
+}
+
+.platform-info:last-of-type,
+.campus-info p:last-of-type {
+  margin-bottom: 2rem;
 }
