--- a/src/app/modules/admin/pages/campuses/campuses.component.html
+++ b/src/app/modules/admin/pages/campuses/campuses.component.html
@@ -1,134 +1,86 @@
 <app-navbar></app-navbar>
-<main>
-  <section>
-    <header>
-      <h2>{{ headerTitle }}</h2>
-      <span
-        class="add material-symbols-outlined"
-        (click)="setIsRegistering()"
-        *ngIf="!isRegistering && !isShowingInfo"
-      >
-        add
-      </span>
-    </header>
-    <h3 *ngIf="campuses.length === 0 && !isRegistering">
-      No hay sedes registradas
-    </h3>
-    <table *ngIf="!isRegistering && campuses.length > 0 && !isShowingInfo">
-      <thead>
-        <tr>
-          <th>#</th>
-          <th>Nombre</th>
-          <th>Dirección</th>
-          <th>Celular</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let campus of campuses" (click)="setIsShowingInfo(campus)">
-          <td>{{ campus.id }}</td>
-          <td>Sede #{{ campus.numeral }}</td>
-          <td>{{ campus.address }}</td>
-          <td>{{ campus.cellphone }}</td>
-          <td class="right">
-            <span class="material-symbols-outlined"> chevron_right </span>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-    <form *ngIf="isRegistering" (ngSubmit)="onSubmit()" [formGroup]="form">
-      <div class="flex">
-        <div class="info">
-          <label for="numeral">Número de sede</label>
-          <input
-            type="number"
-            id="numeral"
-            required
-            formControlName="numeral"
-          />
-        </div>
-        <div class="info">
-          <label for="cellphone">Número de celular</label>
-          <input
-            type="text"
-            id="cellphone"
-            required
-            formControlName="cellphone"
-          />
-        </div>
-      </div>
-      <div class="info">
-        <label for="address">Dirección</label>
-        <input type="text" id="address" required formControlName="address" />
-      </div>
-      <div class="flex">
-        <div class="info">
-          <label for="password">Contraseña</label>
-          <input
-            type="password"
-            id="password"
-            required
-            formControlName="password"
-          />
-        </div>
-        <div class="info">
-          <label for="repeatPassword">Confirmar contraseña</label>
-          <input
-            type="password"
-            id="repeatPassword"
-            required
-            formControlName="repeatPassword"
-          />
-        </div>
-      </div>
-      <div class="actions">
-        <button type="submit">Registrar Sede</button>
-        <button type="button" (click)="setIsRegistering()">Cancelar</button>
-      </div>
-    </form>
-    <article *ngIf="isShowingInfo">
-      <section class="campus-info">
-        <p>
-          <span>ID generado</span>
-          <span>{{ campusData.id }}</span>
-        </p>
-        <p>
-          <span>Fecha y hora de creación</span>
-          <span>{{ campusData.createdAt }}</span>
-        </p>
-        <p>
-          <span>Actualizado por última vez</span>
-          <span>{{ campusData.updatedAt }}</span>
-        </p>
-        <p>
-          <span>Terminal generado</span>
-          <span>{{ campusData.terminal }}</span>
-        </p>
-      </section>
-      <hr />
-      <section class="platforms">
-        <h3>Plataformas enlazadas</h3>
-        <form [formGroup]="platformsForm" (ngSubmit)="updatePlatforms()">
-          <section class="form-section">
-            <div *ngFor="let platform of platforms" class="platform-info">
-              <label>
-                <span>{{ platform.name }}</span>
-                <input
-                  type="checkbox"
-                  [value]="platform.name"
-                  (change)="platformChangeHandle($event)"
-                />
-              </label>
-            </div>
-          </section>
-          <hr />
-          <section class="actions">
-            <button type="submit">Guardar cambios</button>
-            <button type="button" (click)="setIsShowingInfo(undefined)">
-              Cancelar
-            </button>
-          </section>
-        </form>
-      </section>
-    </article>
-  </section>
-</main>
+<div class="page">
+  <app-little-nav [routes]="routes"></app-little-nav>
+  <main>
+    <section class="dash-card">
+      <header>
+        <h2>{{ headerTitle }}</h2>
+        <span class="add material-symbols-outlined" *ngIf="!isShowingInfo">
+          add
+        </span>
+      </header>
+      <h3 *ngIf="campuses.length === 0">No hay sedes registradas</h3>
+      <table *ngIf="campuses.length > 0 && !isShowingInfo" class="shadow">
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>Nombre</th>
+            <th>Dirección</th>
+            <th>Celular</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr
+            *ngFor="let campus of campuses"
+            (click)="setIsShowingInfo(campus)"
+          >
+            <td>{{ campus.id }}</td>
+            <td>Sede #{{ campus.numeral }}</td>
+            <td>{{ campus.address }}</td>
+            <td>{{ campus.cellphone }}</td>
+            <td class="right">
+              <span class="material-symbols-outlined"> chevron_right </span>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <article *ngIf="isShowingInfo">
+        <section class="campus-info">
+          <h3>Información detallada</h3>
+          <p>
+            <span>ID generado</span>
+            <span>{{ campusData.id }}</span>
+          </p>
+          <p>
+            <span>Fecha y hora de creación</span>
+            <span>{{ campusData.createdAt }}</span>
+          </p>
+          <p>
+            <span>Actualizado por última vez</span>
+            <span>{{ campusData.updatedAt }}</span>
+          </p>
+          <p>
+            <span>Terminal generado</span>
+            <span>{{ campusData.terminal }}</span>
+          </p>
+        </section>
+        <div class="divider"></div>
+        <section class="platforms">
+          <h3>Plataformas enlazadas</h3>
+          <form [formGroup]="platformsForm" (ngSubmit)="updatePlatforms()">
+            <section>
+              <div *ngFor="let platform of platforms" class="platform-info">
+                <label>
+                  <input
+                    type="checkbox"
+                    [value]="platform.name"
+                    (change)="platformChangeHandle($event)"
+                  />
+                  <span>{{ platform.name }}</span>
+                </label>
+              </div>
+            </section>
+            <div class="divider"></div>
+            <section class="actions">
+              <button type="submit">Guardar cambios</button>
+              <button type="button" (click)="setIsShowingInfo(undefined)">
+                Cancelar
+              </button>
+            </section>
+          </form>
+        </section>
+      </article>
+    </section>
+  </main>
+</div>
