--- a/src/app/modules/admin/pages/platforms/platforms.component.css
+++ b/src/app/modules/admin/pages/platforms/platforms.component.css
@@ -34,8 +34,7 @@ header {
   color: var(--text-200);
 }
 
-article,
-form {
+article {
   background-color: var(--bg);
   padding: 3rem;
   border-radius: 1rem;
@@ -72,24 +71,5 @@ article .actions {
   margin-top: 3rem;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
-}
-
-article .actions button {
-  max-width: 18rem;
-  width: 50%;
-  min-width: 14rem;
-}
-
-form {
-  max-width: 50rem;
-  margin: auto;
-}
-
-form fieldset {
-  padding: 2rem;
-}
-
-form fieldset legend {
-  font-size: 1.4rem;
+  justify-content: center;
 }
