--- a/src/app/modules/admin/pages/campuses/campuses.component.html
+++ b/src/app/modules/admin/pages/campuses/campuses.component.html
@@ -5,7 +5,11 @@
     <section class="dash-card">
       <header>
         <h2>{{ headerTitle }}</h2>
-        <span class="add material-symbols-outlined" *ngIf="!isShowingInfo">
+        <span
+          class="add material-symbols-outlined"
+          *ngIf="!isShowingInfo"
+          (click)="openModal()"
+        >
           add
         </span>
       </header>
@@ -82,5 +86,36 @@
         </section>
       </article>
     </section>
+    <app-modal modalId="new-campus-modal" modalTitle="Registro de nueva sede">
+      <section>
+        <form class="form-spacing" [formGroup]="form" (ngSubmit)="onSubmit()">
+          <div>
+            <label for="numeral">Número de sede</label>
+            <input type="number" id="numeral" formControlName="numeral" />
+          </div>
+          <div>
+            <label for="cellphone">Número de celular</label>
+            <input type="text" id="cellphone" formControlName="cellphone" />
+          </div>
+          <div>
+            <label for="address">Dirección</label>
+            <input type="text" id="address" formControlName="address" />
+          </div>
+          <div>
+            <label for="password">Contraseña</label>
+            <input type="password" id="password" formControlName="password" />
+          </div>
+          <div>
+            <label for="repeatPassword">Confirma la contraseña</label>
+            <input
+              type="password"
+              id="repeatPassword"
+              formControlName="repeatPassword"
+            />
+          </div>
+          <button type="submit">Registrar</button>
+        </form>
+      </section>
+    </app-modal>
   </main>
 </div>
