feature: create transfers table and update home design with little responsive

--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -12,4 +12,12 @@
     </header>
     <app-available-platforms></app-available-platforms>
   </section>
+  <section role="region" id="transfers" class="shadow">
+    <header>
+      <h2 class="title">Transferencias</h2>
+    </header>
+    <div class="scroll">
+      <app-transfers></app-transfers>
+    </div>
+  </section>
 </main>
