--- a/src/app/modules/home/pages/home/home.component.css
+++ b/src/app/modules/home/pages/home/home.component.css
@@ -1,22 +1,51 @@
 main {
-  width: 90%;
+  min-height: calc(100vh - var(--little-nav-h) - 2rem);
   margin: auto;
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-around;
+  padding: 0 2rem 4rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 418px 1fr;
+  grid-template-areas:
+    "new-transfer transfers transfers"
+    "available-platforms available-platforms available-platforms";
+  gap: 3rem;
+}
+
+section {
+  padding: 3rem;
+  border-radius: 1rem;
 }
 
 #new-transfer {
-  width: 50%;
-  padding: 3rem;
-  border-radius: 2rem;
+  grid-area: new-transfer;
+  background-color: var(--bg-300);
+}
+
+#transfers {
+  grid-area: transfers;
   background-color: var(--bg-300);
 }
 
 #available-platforms {
-  width: 40%;
-  height: calc(100vh - 15rem);
-  padding: 3rem;
-  border-radius: 2rem;
+  grid-area: available-platforms;
   background-color: var(--bg-200);
+  box-shadow: inset 0 0 1rem var(--accent-100);
+}
+
+.scroll {
+  max-height: 90%;
+  overflow: auto;
+}
+
+@media (max-width: 1085px) {
+  main {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #new-transfer {
+    width: 100%;
+    max-width: 40rem;
+    margin: auto;
+  }
 }
