feature: develop responsive design to navbar and home page

--- a/src/app/modules/layout/components/navbar/navbar.component.html
+++ b/src/app/modules/layout/components/navbar/navbar.component.html
@@ -1,10 +1,10 @@
 <nav>
   <div>
-    <header>
+    <header class="hidden">
       <h1>Servinet Computers</h1>
       <h2>Sede #2</h2>
     </header>
-    <div class="divider"></div>
+    <div class="divider hidden"></div>
     <ul>
       <li>
         <a routerLink="/home">
@@ -20,7 +20,7 @@
       </li>
     </ul>
   </div>
-  <div>
+  <div class="hidden">
     <div class="divider"></div>
     <ul>
       <li>
