--- a/src/app/modules/layout/components/navbar/navbar.component.css
+++ b/src/app/modules/layout/components/navbar/navbar.component.css
@@ -1,58 +1,99 @@
-nav {
-  width: var(--nav-w);
-  height: 100vh;
-  position: fixed;
-  left: 0;
-  top: 0;
-  color: var(--text-100);
-  padding: 4rem 2rem;
-  border-right: 2px solid var(--bg-200);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+@media (max-width: 700px) {
+  nav {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: var(--nav-h);
+    background-color: var(--bg-300);
+    border-top: 1px solid #c0c0c0;
+  }
+
+  li a {
+    flex-direction: column;
+    padding: 1rem;
+    width: 10rem;
+    font-size: 1.6rem;
+  }
+
+  nav *:not(.hidden) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
+
+  li a:hover {
+    background-color: var(--accent-200);
+    color: var(--bg);
+    cursor: pointer;
+  }
+
+  .hidden {
+    display: none;
+  }
 }
 
-.divider {
-  width: 100%;
-  height: 2px;
-  border: none;
-  background: var(--bg-200);
-}
+@media (min-width: 701px) {
+  nav {
+    width: var(--nav-w);
+    height: 100vh;
+    position: fixed;
+    left: 0;
+    top: 0;
+    color: var(--text-100);
+    padding: 4rem 2rem;
+    border-right: 2px solid var(--bg-200);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 
-header {
-  text-align: center;
-  margin-bottom: 2rem;
-}
+  .divider {
+    width: 100%;
+    height: 2px;
+    border: none;
+    background: var(--bg-200);
+  }
 
-header h1 {
-  font-size: 2rem;
-  margin-bottom: 1rem;
-}
+  header {
+    text-align: center;
+    margin-bottom: 2rem;
+  }
 
-header h2 {
-  color: var(--text-200);
-  font-weight: 500;
-  font-size: 1.8rem;
-}
+  header h1 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
 
-ul {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  margin-top: 2rem;
-}
+  header h2 {
+    color: var(--text-200);
+    font-weight: 500;
+    font-size: 1.8rem;
+  }
 
-li a {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-  font-size: 1.6rem;
-  padding: 1rem 2rem;
-  border-radius: 1rem;
-}
+  ul {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-top: 2rem;
+  }
 
-li a:hover {
-  background-color: var(--accent-200);
-  color: var(--bg);
-  cursor: pointer;
+  li a {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    font-size: 1.6rem;
+    padding: 1rem 2rem;
+    border-radius: 1rem;
+  }
+
+  li a:hover {
+    background-color: var(--accent-200);
+    color: var(--bg);
+    cursor: pointer;
+  }
+
+  .hidden {
+    display: initial;
+  }
 }
