--- a/src/app/modules/home/components/transfers/transfers.component.html
+++ b/src/app/modules/home/components/transfers/transfers.component.html
@@ -1,20 +1,20 @@
 <table>
   <thead>
     <tr>
-      <th>Código</th>
+      <th class="center">Código</th>
       <th>Plataforma</th>
-      <th>Valor</th>
-      <th>Hora</th>
+      <th class="right">Valor</th>
+      <th class="center">Hora</th>
       <th></th>
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let transfer of transfers">
-      <td>{{ transfer.id }}</td>
+      <td class="center">{{ transfer.id }}</td>
       <td>{{ transfer.platformName }}</td>
-      <td>{{ transfer.value }}</td>
-      <td>{{ transfer.time }}</td>
-      <td>
+      <td class="right">{{ transfer.value }}</td>
+      <td class="center">{{ transfer.time }}</td>
+      <td class="actions">
         <span class="material-symbols-outlined">edit</span>
         <span class="material-symbols-outlined" (click)="delete(transfer.id)"
           >delete</span
