--- a/src/app/modules/layout/components/navbar/navbar.component.css
+++ b/src/app/modules/layout/components/navbar/navbar.component.css
@@ -1,3 +1,12 @@
+li a:hover {
+  background-color: var(--accent-100);
+  cursor: pointer;
+}
+
+.selected * {
+  font-weight: 600;
+}
+
 @media (max-width: 700px) {
   nav {
     position: fixed;
@@ -22,12 +31,6 @@
     height: 100%;
   }
 
-  li a:hover {
-    background-color: var(--accent-200);
-    color: var(--bg);
-    cursor: pointer;
-  }
-
   .hidden {
     display: none;
   }
@@ -41,7 +44,7 @@
     left: 0;
     top: 0;
     color: var(--text-100);
-    padding: 4rem 2rem;
+    padding: 0 2rem 4rem;
     border-right: 2px solid var(--bg-200);
     display: flex;
     flex-direction: column;
@@ -52,44 +55,45 @@
     width: 100%;
     height: 2px;
     border: none;
-    background: var(--bg-200);
+    background-color: var(--bg-200);
   }
 
   header {
+    height: var(--little-nav-h);
     text-align: center;
     margin-bottom: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   header h1 {
     font-size: 2rem;
-    margin-bottom: 1rem;
-  }
-
-  header h2 {
-    color: var(--text-200);
-    font-weight: 500;
-    font-size: 1.8rem;
   }
 
   ul {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    margin-top: 2rem;
   }
 
   li a {
     display: flex;
     align-items: center;
     gap: 1rem;
-    font-size: 1.6rem;
     padding: 1rem 2rem;
-    border-radius: 1rem;
+    border-radius: 2rem;
   }
 
-  li a:hover {
-    background-color: var(--accent-200);
-    color: var(--bg);
-    cursor: pointer;
+  .icon {
+    font-size: 3rem;
+  }
+
+  .title {
+    font-size: 1.8rem;
+  }
+
+  .selected * {
+    letter-spacing: 0.1rem;
   }
 }
