--- a/src/app/modules/shared/components/little-nav/little-nav.component.css
+++ b/src/app/modules/shared/components/little-nav/little-nav.component.css
@@ -1,21 +1,31 @@
 nav {
-  width: 100%;
-  height: var(--little-nav-h);
   padding: 2rem;
-  margin: 1rem 0rem;
+  height: var(--little-nav-h);
+  margin-bottom: 2rem;
+}
+
+ul {
+  background-color: var(--bg-300);
+  padding: 3rem;
+  border-radius: 3rem;
 }
 
 ul,
 ul * {
+  height: 100%;
   display: flex;
   align-items: center;
 }
 
 li a {
+  font-size: 2rem;
   color: var(--text-100);
-  font-size: 1.6rem;
   font-weight: 600;
   gap: 0.4rem;
+}
+
+li a span {
+  font-size: 2.4rem;
 }
 
 .chevron,
