--- a/src/app/modules/layout/components/navbar/navbar.component.css
+++ b/src/app/modules/layout/components/navbar/navbar.component.css
@@ -51,13 +51,6 @@ li a:hover {
     justify-content: space-between;
   }
 
-  .divider {
-    width: 100%;
-    height: 2px;
-    border: none;
-    background-color: var(--bg-200);
-  }
-
   header {
     height: var(--little-nav-h);
     text-align: center;
@@ -85,11 +78,11 @@ li a:hover {
     border-radius: 2rem;
   }
 
-  .icon {
+  li a span:first-of-type {
     font-size: 3rem;
   }
 
-  .title {
+  li a span:last-of-type {
     font-size: 1.8rem;
   }
 
