--- a/src/app/modules/layout/components/navbar/navbar.component.css
+++ b/src/app/modules/layout/components/navbar/navbar.component.css
@@ -1,3 +1,7 @@
+li a {
+  transition: 150ms ease-in-out;
+}
+
 li a:hover {
   background-color: var(--accent-100);
   cursor: pointer;
@@ -61,7 +65,7 @@ li a:hover {
   }
 
   header h1 {
-    font-size: 2rem;
+    font-size: 2.4rem;
   }
 
   ul {
