update: replace shadows to borders, wrap calendars and table into a card, add $ symbol to values

--- a/src/app/modules/reports/components/final-stats/final-stats.component.html
+++ b/src/app/modules/reports/components/final-stats/final-stats.component.html
@@ -4,7 +4,7 @@
   </p>
   <div class="separator"></div>
   <p>
-    Total<span>{{ total }}</span>
+    Total<span class="total">{{ total }}</span>
   </p>
   <div class="separator"></div>
   <button>Imprimir</button>
