--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -1,12 +1,12 @@
 <app-little-nav [routes]="routes"></app-little-nav>
 <main>
-  <section role="region" id="new-transfer" class="shadow">
+  <section role="region" id="new-transfer" class="border">
     <header>
       <h2 class="title">Registrar Transferencia</h2>
     </header>
     <app-new-transfer-form></app-new-transfer-form>
   </section>
-  <section role="region" id="transfers" class="shadow">
+  <section role="region" id="transfers" class="border">
     <header>
       <h2 class="title">Transferencias</h2>
     </header>
