--- a/src/app/modules/reports/components/transfers-table/transfers-table.component.css
+++ b/src/app/modules/reports/components/transfers-table/transfers-table.component.css
@@ -6,6 +6,14 @@ thead {
   text-align: center;
 }
 
+.right {
+  text-align: right;
+}
+
+td.right::before {
+  content: "$";
+}
+
 th:nth-of-type(1),
 td:nth-of-type(1) {
   width: 10%;
