--- a/src/app/modules/reports/pages/reports/reports.component.css
+++ b/src/app/modules/reports/pages/reports/reports.component.css
@@ -1,10 +1,22 @@
 main {
   padding: 0 2rem 4rem;
   margin: auto;
+  gap: 5rem;
+}
+
+article {
+  background-color: var(--bg-200);
+  box-shadow: inset 0 0 0.5rem var(--accent-100);
+  padding: 3rem 2rem;
+  gap: 3rem;
+  border-radius: 1rem;
+}
+
+main,
+article {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 5rem;
 }
 
 main * {
@@ -16,8 +28,7 @@ main * {
 }
 
 #final-stats {
-  padding: 2rem 0;
-  border: 2px solid var(--accent-100);
-  border-radius: 3rem;
+  padding: 2rem;
+  border-radius: 2rem;
   background-color: var(--bg-300);
 }
