--- a/src/styles.css
+++ b/src/styles.css
@@ -169,6 +169,10 @@ tbody tr:hover {
   box-shadow: 0 0 1rem #c0c0c0;
 }
 
+.border {
+  border: 1px solid var(--bg-200);
+}
+
 .background-gradient {
   background: linear-gradient(to bottom, var(--bg) 80%, var(--bg-200));
 }
