--- a/src/app/modules/portal/pages/login/login.component.css
+++ b/src/app/modules/portal/pages/login/login.component.css
@@ -1,20 +1,26 @@
 main {
-  min-height: calc(100vh - var(--login-footer-h));
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 #form {
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
   width: 80%;
   max-width: 60rem;
-  padding: 8rem 3rem;
+  padding: 3rem;
   border-radius: 2rem;
   background-color: var(--bg-300);
 }
 
+#form header {
+  padding: 3rem 0 1rem;
+}
+
 #form h1 {
-  margin-bottom: 3rem;
   text-align: center;
   font-size: 4rem;
 }
