--- a/src/app/modules/admin/pages/login/login.component.css
+++ b/src/app/modules/admin/pages/login/login.component.css
@@ -1,6 +1,6 @@
 main,
 section {
-  height: calc(100vh - var(--login-footer-h));
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
