--- a/src/app/modules/admin/pages/dashboard/dashboard.component.css
+++ b/src/app/modules/admin/pages/dashboard/dashboard.component.css
@@ -1,17 +1,9 @@
-.divider {
-  margin-top: calc((var(--little-nav-h) * -1) - 2rem);
-  width: 2px;
-  min-height: 100%;
-  border: none;
-  background-color: var(--bg-200);
-}
-
 main {
   min-height: calc(100vh - var(--little-nav-h) - 2rem);
   padding: 0 2rem 4rem;
   display: flex;
   justify-content: space-between;
-  gap: 2rem;
+  gap: 3rem 2rem;
 }
 
 #stats {
@@ -20,4 +12,15 @@ main {
 
 #campuses {
   width: 40%;
+}
+
+@media (max-width: 1100px) {
+  main {
+    flex-direction: column-reverse;
+  }
+
+  #campuses,
+  #stats {
+    width: 100%;
+  }
 }
