--- a/src/app/modules/admin/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/pages/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<app-navbar></app-navbar>
+<app-navbar [selectedRoute]="0"></app-navbar>
 <div class="page">
   <app-little-nav [routes]="routes" class="nav"></app-little-nav>
   <main>
@@ -6,9 +6,10 @@
       <header>
         <h2>Transferencias del día</h2>
       </header>
-      <app-stats></app-stats>
+      <div class="scroll">
+        <app-stats></app-stats>
+      </div>
     </section>
-    <div class="divider"></div>
     <section id="campuses" role="region" class="dash-card">
       <header>
         <h2>Total por sedes</h2>
