--- a/src/styles.css
+++ b/src/styles.css
@@ -176,14 +176,23 @@ tbody tr:hover {
   background: linear-gradient(to bottom, var(--bg) 80%, var(--bg-200));
 }
 
-form.form-spacing {
+form.form-spacing,
+form.form-spacing div {
   display: flex;
   flex-direction: column;
+}
+
+form.form-spacing {
   gap: 2rem;
 }
 
-form.form-spacing label {
-  margin-bottom: 0.5rem;
+form.form-spacing div {
+  gap: 0.5rem;
+}
+
+form.form-spacing strong {
+  font-size: 1.25rem;
+  color: #bb1818;
 }
 
 form.form-spacing button {
