feature: add a dot at the end of the strong validators and add some validators to the admin login form

--- a/src/app/modules/portal/components/login-form/login-form.component.html
+++ b/src/app/modules/portal/components/login-form/login-form.component.html
@@ -9,7 +9,7 @@
       required
     />
     <strong *ngIf="hasError('username', 'required')"
-      >El terminal es requerido.</strong
+      >El terminal es requerido</strong
     >
   </div>
   <div>
@@ -22,7 +22,7 @@
       required
     />
     <strong *ngIf="hasError('password', 'required')"
-      >La contraseña es requerida.</strong
+      >La contraseña es requerida</strong
     >
   </div>
   <button type="submit">Ingresar al portal</button>
