--- a/src/app/modules/admin/components/login-form/login-form.component.html
+++ b/src/app/modules/admin/components/login-form/login-form.component.html
@@ -8,6 +8,9 @@
       formControlName="username"
       required
     />
+    <strong *ngIf="hasError('username', 'required')"
+      >El nombre de usuario es requerido</strong
+    >
   </div>
   <div>
     <label for="password">Contraseña</label>
@@ -18,6 +21,9 @@
       formControlName="password"
       required
     />
+    <strong *ngIf="hasError('password', 'required')"
+      >La contraseña es requerida</strong
+    >
   </div>
   <button type="submit">Iniciar sesión</button>
   <a>¿Haz olvidado la contraseña?</a>
