feature: create temporary loading component

--- a/src/app/modules/portal/components/login-form/login-form.component.html
+++ b/src/app/modules/portal/components/login-form/login-form.component.html
@@ -27,3 +27,4 @@
   </div>
   <button type="submit">Ingresar al portal</button>
 </form>
+<app-loading [loading]="status === 'loading'"></app-loading>
