update: admin login page responsive

--- a/src/app/modules/admin/pages/login/login.component.html
+++ b/src/app/modules/admin/pages/login/login.component.html
@@ -1,5 +1,5 @@
 <main>
-  <section role="region" id="welcome">
+  <section role="region" id="welcome" class="hidden">
     <header>
       <h1>¡Bienvenido de vuelta!</h1>
       <p>Inicia sesión para acceder a tus productos y reportes del día.</p>
