--- a/src/app/modules/admin/pages/login/login.component.css
+++ b/src/app/modules/admin/pages/login/login.component.css
@@ -30,8 +30,20 @@ section {
 
 #login-form h2 {
   font-size: 3rem;
+  text-align: center;
+  text-wrap: pretty;
 }
 
 app-login-form {
   width: 100%;
+}
+
+@media (max-width: 800px) {
+  .hidden {
+    display: none;
+  }
+
+  #login-form {
+    width: 100%;
+  }
 }
