--- a/src/app/modules/admin/components/login-form/login-form.component.html
+++ b/src/app/modules/admin/components/login-form/login-form.component.html
@@ -28,3 +28,4 @@
   <button type="submit">Iniciar sesión</button>
   <a>¿Haz olvidado la contraseña?</a>
 </form>
+<app-loading [loading]="status === 'loading'"></app-loading>
