--- a/src/app/modules/admin/pages/login/login.component.css
+++ b/src/app/modules/admin/pages/login/login.component.css
@@ -31,7 +31,9 @@ section {
 #login-form h2 {
   font-size: 3rem;
   text-align: center;
-  text-wrap: pretty;
+  text-wrap: balance;
+  padding: 0 3rem;
+  margin: auto;
 }
 
 app-login-form {
