--- a/src/app/modules/portal/pages/home/home.component.html
+++ b/src/app/modules/portal/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <app-little-nav [routes]="routes"></app-little-nav>
 <main>
-  <section role="region" id="new-transfer" class="border">
+  <section role="region" id="new-transfer">
     <header>
       <h2 class="title">Registrar Transferencia</h2>
     </header>
