--- a/src/app/modules/portal/components/navbar/navbar.component.html
+++ b/src/app/modules/portal/components/navbar/navbar.component.html
@@ -1,7 +1,8 @@
 <nav>
   <div>
     <header class="hidden">
-      <h1>Servinet Computers</h1>
+      <span class="material-symbols-outlined"> computer </span>
+      <h1>Servinet</h1>
     </header>
     <ul>
       <li *ngFor="let route of routes; index as i" (click)="clickHandler(i)">
