--- a/src/app/modules/portal/pages/home/home.component.html
+++ b/src/app/modules/portal/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<app-little-nav [routes]="routes"></app-little-nav>
+<app-header-title headerTitle="Inicio"></app-header-title>
 <main>
   <section role="region" id="new-transfer">
     <header>
