--- a/src/app/modules/portal/pages/reports/reports.component.html
+++ b/src/app/modules/portal/pages/reports/reports.component.html
@@ -1,4 +1,4 @@
-<app-little-nav [routes]="routes"></app-little-nav>
+<app-header-title headerTitle="Reportes"></app-header-title>
 <main>
   <article>
     <section role="region" id="calendars">
