update: reports colors

--- a/src/app/modules/portal/pages/reports/components/transfers-table/transfers-table.component.html
+++ b/src/app/modules/portal/pages/reports/components/transfers-table/transfers-table.component.html
@@ -4,7 +4,7 @@
       <th class="center">Código</th>
       <th>Plataforma</th>
       <th class="right">Valor</th>
-      <th class="center">Hora</th>
+      <th class="center">Fecha y Hora</th>
     </tr>
   </thead>
   <tbody>
@@ -12,7 +12,7 @@
       <td class="center">{{ transfer.id }}</td>
       <td>{{ transfer.platformName }}</td>
       <td class="right">{{ transfer.value }}</td>
-      <td class="center">{{ transfer.time }}</td>
+      <td class="center">{{ transfer.createdAt }}</td>
     </tr>
   </tbody>
 </table>
