--- a/src/app/modules/portal/pages/reports/reports.component.html
+++ b/src/app/modules/portal/pages/reports/reports.component.html
@@ -8,7 +8,7 @@
       <app-transfers-table></app-transfers-table>
     </section>
   </article>
-  <section role="region" id="final-stats" class="border">
+  <section role="region" id="final-stats">
     <app-final-stats></app-final-stats>
   </section>
 </main>
